Allow ofx import of regular banking transactions within an investment account.  An upgrade for libofx 0.10 changed invtransactiontype from false to true, so we need to explicitly recognize invtransactiontype OFX_INVBANKTRAN.

BUG: 435856

(cherry picked from commit 88d97f79ace88879136c60a99c69c7dc50a32548)